--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "devDependencies": {
     "grunt": "^0.4.4",
     "grunt-contrib-connect": "^0.7.1",
-    "grunt-contrib-watch": "^0.6.0"
+    "grunt-contrib-watch": "^0.6.0",
+    "karma": "^0.12.0",
+    "grunt-karma": "^0.8.2",
+    "karma-phantomjs-launcher": "^0.1.2",
+    "karma-jasmine": "^0.2.2"
   }
 }
