--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "homepage": "https://github.com/spotch/snake",
   "authors": [
-    "Adam Schneider <spotchious@gmail.com>"
+    "Adam Schneider"
   ],
   "description": "SNAKE GAME!",
   "license": "MIT",
